[package]
authors = ["sunli <scott_s829@163.com>", "Koxiaet"]
categories = ["network-programming", "asynchronous"]
description = "GraphQL query parser for async-graphql"
documentation = "https://docs.rs/async-graphql/"
edition = "2021"
homepage = "https://github.com/async-graphql/async-graphql"
keywords = ["futures", "async", "graphql"]
license = "MIT OR Apache-2.0"
name = "async-graphql-parser"
repository = "https://github.com/async-graphql/async-graphql"
version = "6.0.8"

[dependencies]
async-graphql-value = { path = "../value", version = "6.0.8" }
pest = "2.5.5"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"

[dev-dependencies]
pest_generator = "2.6.0"
proc-macro2 = "1.0.37"
