[package]
authors = ["sunli <scott_s829@163.com>"]
categories = ["network-programming", "asynchronous"]
description = "async-graphql for poem"
documentation = "https://docs.rs/async-graphql-poem/"
edition = "2021"
homepage = "https://github.com/async-graphql/async-graphql"
keywords = ["futures", "async", "graphql", "poem"]
license = "MIT OR Apache-2.0"
name = "async-graphql-poem"
repository = "https://github.com/async-graphql/async-graphql"
version = "6.0.8"

[dependencies]
async-graphql = { path = "../..", version = "6.0.8", default-features = false }

futures-util = { version = "0.3.0", default-features = false }
poem = { version = "1.3.48", features = ["websocket"] }
serde_json = "1.0.64"
tokio-util = { version = "0.7.1", default-features = false, features = [
    "compat",
] }
mime = "0.3.16"
tokio = { version = "1.17.0", features = ["time"] }
tokio-stream = "0.1.14"
